--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -1,16 +1,22 @@
 version: '3'
 
 services:
-  mysql:
+  db: #container
     image: mysql:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: hocalhost
-      MYSQL_DATABASE: dbihome
-      MYSQL_USER: myslquser
-      MYSQL_PASSWORD: mysqlpassword
+    restart: always
+    environment: #variáveis de ambiente
+      MYSQL_DATABASE: 'dbihome'
+      # So you don't have to use root, but you can if you like
+      MYSQL_USER: 'user'
+      # You can use whatever password you like
+      MYSQL_PASSWORD: 'password'
+      # Password for root access
+      MYSQL_ROOT_PASSWORD: 'password'
     ports:
       - '3306:3306'
+    expose:
+      - '3306'
     volumes:
-      - mysql-data:/var/lib/mysql
+      - my-db:/var/lib/mysql
 volumes:
-  mysql-data:
+  my-db:
