--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -1,21 +1,21 @@
-version: '3'
+version: "3"
 
 services:
   db: #container
     image: mysql:latest
     restart: always
     environment: #variáveis de ambiente
-      MYSQL_DATABASE: 'dbihome'
+      MYSQL_DATABASE: "dbihome"
       # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
+      MYSQL_USER: "user"
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'password'
+      MYSQL_PASSWORD: "password"
       # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: "password"
     ports:
-      - '5432:5432'
+      - "5432:5432"
     expose:
-      - '5432'
+      - "5432"
     volumes:
       - my-db:/var/lib/mysql
 volumes:
