--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-router-dom": "^6.22.1",
+    "tailwindcss": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,8 +42,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.22.1",
-    "tailwindcss": "^3.4.1"
+   
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
